--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<div class="div1">
 		 <h1 class="heading1">Bangladesh</h1>
 		  <p class="para1">
-		  	<img src="file:///C:/Users/Arin/Downloads/Bangladesh-Map-1.webp"width="459px">
+		  	<img src="Bangladesh-Map-1.webp" width="459px">
 
 		  	<m>Bangladesh[a] (Bengali: বাংলাদেশ [ˈbaŋlaˌdeʃ] ⓘ), officially the People's Republic of Bangladesh,[b] is a country in South Asia. It is the eighth-most populous country in the world and is among the most densely populated countries with a population of nearly 170 million in an area of 148,460 square kilometres (57,320 sq mi). Bangladesh shares land borders with India to the west, north, and east, and Myanmar[c] to the southeast; to the south, it has a coastline along the Bay of Bengal. It is narrowly separated from Bhutan and Nepal by the Siliguri Corridor and from China by the Indian state of Sikkim in the north. Dhaka, the capital and largest city, is the nation's political, financial, and cultural centre. Chittagong, the second-largest city, is the busiest port on the Bay of Bengal. The official language is Bengali.
 
@@ -47,12 +47,12 @@ Ancient Buddhist and Hindu states which ruled Bangladesh included the Vanga, Sam
       <h3 class="heading2">Bangladesh's favoreat food</h3>
 
       <ul>
-      	<li>fuska</li><img src="file:///C:/Users/Arin/Desktop/HTML%20AND%20CSS/PRO2/New%20folder/PRO%203/fuska-a-delicious-bengali-snack-H07PXM.jpg"width="90px">
-      	<li>kachi biryani</li><img src="file:///C:/Users/Arin/Desktop/HTML%20AND%20CSS/PRO2/New%20folder/PRO%203/kachi.jpg"width="90px">
-      	<li>kabab</li><img src="file:///C:/Users/Arin/Desktop/HTML%20AND%20CSS/PRO2/New%20folder/PRO%203/seekh-kabab_2852.jpg"width="90px">
-      	<li>llish</li><img src="file:///C:/Users/Arin/Desktop/HTML%20AND%20CSS/PRO2/New%20folder/PRO%203/OIP.jpeg"width="90px">
-      	<li>halim</li><img src="file:///C:/Users/Arin/Desktop/HTML%20AND%20CSS/PRO2/New%20folder/PRO%203/maxresdefault.jpg"width="90px">
-      	<li>paratha etc</li><img src="file:///C:/Users/Arin/Desktop/HTML%20AND%20CSS/PRO2/New%20folder/PRO%203/GettyImages-SUSANSAM-487133372-345586e7531e4709bd531be5673f3f14.jpg"width="90px">
+      	<li>fuska</li><img src="fuska-a-delicious-bengali-snack-H07PXM.jpg"width="90px">
+      	<li>kachi biryani</li><img src="kachi.jpg"width="90px">
+      	<li>kabab</li><img src="seekh-kabab_2852.jpg"width="90px">
+      	<li>llish</li><img src="OIP.jpeg"width="90px">
+      	<li>halim</li><img src="maxresdefault.jpg"width="90px">
+      	<li>paratha etc</li><img src="GettyImages-SUSANSAM-487133372-345586e7531e4709bd531be5673f3f14.jpg"width="90px">
       </ul>
 
       <h3>Bangladesh's alies/friends contry</h3>
@@ -61,11 +61,11 @@ Ancient Buddhist and Hindu states which ruled Bangladesh included the Vanga, Sam
        	
        	<li>India</li><img src="file:///C:/Users/Arin/Desktop/HTML%20AND%20CSS/PRO2/html%20image_files/INDIA.P3.webp"width="90px">
        	<li>Serbia</li><img src="file:///C:/Users/Arin/Desktop/HTML%20AND%20CSS/PRO2/html%20image_files/R%20(1).jpeg"width="90px">
-       	<li>Russia</li><img src="file:///C:/Users/Arin/Desktop/HTML%20AND%20CSS/PRO2/New%20folder/PRO%203/istockphoto-1412424201-612x612%20(1).jpg"width="90px">
-       	<li>poland</li><img src="file:///C:/Users/Arin/Desktop/HTML%20AND%20CSS/PRO2/New%20folder/PRO%203/desktop-wallpaper-poland-large-flag-poland-flag.jpg"width=90px>
-       	<li>Turkey</li><img src="file:///C:/Users/Arin/Desktop/HTML%20AND%20CSS/PRO2/New%20folder/PRO%203/R.png"width="90px">
-       	<li>Japan</li><img src="file:///C:/Users/Arin/Desktop/HTML%20AND%20CSS/PRO2/New%20folder/PRO%203/japan.jpg"width="90px">
-       	<li>Pakisthan</li><img src="file:///C:/Users/Arin/Desktop/HTML%20AND%20CSS/PRO2/New%20folder/PRO%203/pakistan-flag-uhd-4k-wallpaper.jpg"width=90px>
+       	<li>Russia</li><img src="istockphoto-1412424201-612x612%20(1).jpg"width="90px">
+       	<li>poland</li><img src="desktop-wallpaper-poland-large-flag-poland-flag.jpg"width=90px>
+       	<li>Turkey</li><img src="R.png"width="90px">
+       	<li>Japan</li><img src="japan.jpg"width="90px">
+       	<li>Pakisthan</li><img src="pakistan-flag-uhd-4k-wallpaper.jpg"width=90px>
 
        </ul>
 
